--- a/src/cisi/notebooks/generate_embeddings.ipynb
+++ b/src/cisi/notebooks/generate_embeddings.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports\n",
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
     "from sklearn.decomposition import TruncatedSVD\n",
@@ -14,7 +15,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "import os\n",
-    "import pickle\n"
+    "import pickle"
    ]
   },
   {
@@ -24,6 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load documents' texts\n",
     "with open(\"../dataset/documents.pkl\", \"rb\") as f:\n",
     "    docs = pickle.load(f)"
    ]
@@ -35,6 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load queries' texts\n",
     "with open(\"../dataset/queries.pkl\", \"rb\") as f:\n",
     "    queries = pickle.load(f)"
    ]
@@ -44,7 +47,7 @@
    "id": "14280f20-779d-41e3-8a9f-85c265206d08",
    "metadata": {},
    "source": [
-    "### lsi"
+    "### LSI"
    ]
   },
   {
@@ -54,6 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract document ids and clean_texts\n",
     "document_ids = list(docs.keys())\n",
     "clean_documents = [d[\"clean_text\"] for d in docs.values()]"
    ]
@@ -65,18 +69,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract query ids and clean_texts\n",
     "query_ids = list(queries.keys())\n",
     "clean_queries = [q[\"clean_text\"] for q in queries.values()]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "bca84189-cd4a-4d20-866f-48e71273b952",
+   "cell_type": "markdown",
+   "id": "bac21eae-304b-44bd-af36-d9638638ead2",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Tf-idf"
+    "#### Tf-idf"
    ]
   },
   {
@@ -111,6 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get tfidf vector for each document\n",
     "documents_tfidf_vectors = vectorizer.transform(clean_documents)"
    ]
   },
@@ -121,17 +125,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get tfidf vector for each query\n",
     "queries_tfidf_vectors = vectorizer.transform(clean_queries)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "26cbe888-ce07-4b39-b2b6-0136469d5aa9",
+   "cell_type": "markdown",
+   "id": "0d85e7da-4caa-4e7e-91be-733b7d8c8288",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# SVD"
+    "#### SVD"
    ]
   },
   {
@@ -141,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_topics = 100\n",
+    "num_topics = 100  # Number of dimensions\n",
     "svd = TruncatedSVD(n_components=num_topics)"
    ]
   },
@@ -152,7 +155,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get embedding for each document\n",
     "documents_lsi_vectors = svd.fit_transform(documents_tfidf_vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3897c862-a3d1-46f2-b87d-aa04d68c9913",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save document embeddings\n",
+    "documents_lsi = {id: {\"embedding\": vector} for id, vector in zip(\n",
+    "    document_ids, documents_lsi_vectors)}\n",
+    "with open(\"../embeddings/lsi/documents.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(documents_lsi, f)"
    ]
   },
   {
@@ -162,57 +180,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get embedding for each query\n",
     "queries_lsi_vectors = svd.fit_transform(queries_tfidf_vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "8f6d85ca-d9c3-4982-896c-672c857a6210",
+   "execution_count": null,
+   "id": "e4321fc4-814d-4253-88b0-bcf2c4ce30fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save embeddings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "4425f778-ac70-4ffa-bcc3-e2d175f21e6f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "documents_lsi = {id: {\"embedding\": vector} for id, vector in zip(document_ids, documents_lsi_vectors)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "3a946eb8-6034-426b-a34b-6512116ac7ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"../embeddings/lsi/documents.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(documents_lsi, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "7dbad62a-6ca2-43be-8862-aab03044cc00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "queries_lsi = {id: {\"embedding\": vector} for id, vector in zip(query_ids, queries_lsi_vectors)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "23fc7aed-c6d7-4522-bb7a-2f95b3756820",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Save query embeddings\n",
+    "queries_lsi = {id: {\"embedding\": vector} for id, vector in zip(\n",
+    "    query_ids, queries_lsi_vectors)}\n",
     "with open(\"../embeddings/lsi/queries.pkl\", \"wb\") as f:\n",
     "    pickle.dump(queries_lsi, f)"
    ]
@@ -222,7 +203,7 @@
    "id": "3d2f39c4-7dff-4d08-aa48-8dfcc9d5614d",
    "metadata": {},
    "source": [
-    "### text-embedding-ada-002-v2"
+    "### ADA (text-embedding-ada-002-v2)"
    ]
   },
   {
@@ -232,6 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load OpenAI's API key\n",
     "load_dotenv()\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")"
    ]
@@ -243,6 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize OpenAI's client\n",
     "client = OpenAI(api_key=OPENAI_API_KEY)"
    ]
   },
@@ -253,10 +236,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Use OpenAI's text-embedding-ada-002 model to get a 1536-dimensional\n",
+    "#  embedding for the given input text\n",
     "def get_embedding(text, model=\"text-embedding-ada-002\"):\n",
     "    text = text.replace(\"\\n\", \" \")\n",
     "    response = client.embeddings.create(input=[text], model=model)\n",
-    "    if response and hasattr(response, 'data') and response.data:\n",
+    "    if response and hasattr(response, \"data\") and response.data:\n",
     "        embedding = response.data[0].embedding\n",
     "        return embedding\n",
     "    else:\n",
@@ -273,7 +258,7 @@
    "source": [
     "#### API CALL WARNING ####\n",
     "\n",
-    "# Generate embeddings for docs\n",
+    "# Get embedding for each document\n",
     "documents_ada = {}\n",
     "for i, doc in tqdm(docs.items(), desc=\"Generating Document Embeddings\"):\n",
     "    documents_ada[i] = {\"embedding\": get_embedding(doc[\"text\"])}"
@@ -286,6 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save document embeddings\n",
     "with open(\"../embeddings/text-embedding-ada-002-v2/documents.pkl\", \"wb\") as f:\n",
     "    pickle.dump(documents_ada, f)"
    ]
@@ -307,7 +293,7 @@
    "source": [
     "#### API CALL WARNING ####\n",
     "\n",
-    "# Generate embeddings for queries\n",
+    "# Get embedding for each query\n",
     "queries_ada = {}\n",
     "for i, query in tqdm(queries.items(), desc=\"Generating Query Embeddings\"):\n",
     "    queries_ada[i] = {\"embedding\": get_embedding(query[\"text\"])}"
@@ -320,6 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save query embeddings\n",
     "with open(\"../embeddings/text-embedding-ada-002-v2/queries.pkl\", \"wb\") as f:\n",
     "    pickle.dump(queries_ada, f)"
    ]
