--- a/src/cisi/notebooks/ir_techniques.ipynb
+++ b/src/cisi/notebooks/ir_techniques.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports\n",
     "from dotenv import load_dotenv\n",
     "from langchain.embeddings.openai import OpenAIEmbeddings\n",
     "from langchain.vectorstores import Annoy, FAISS\n",
@@ -34,6 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load documents' LSI embeddings\n",
     "with open(\"../embeddings/lsi/documents.pkl\", \"rb\") as f:\n",
     "    documents_lsi = pickle.load(f)"
    ]
@@ -45,6 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load queries' LSI embeddings\n",
     "with open(\"../embeddings/lsi/queries.pkl\", \"rb\") as f:\n",
     "    queries_lsi = pickle.load(f)"
    ]
@@ -56,6 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Find cosine similarity between two vectors a and b\n",
     "def cosine_similarity(a, b):\n",
     "    return np.dot(a, b) / (np.linalg.norm(a) * np.linalg.norm(b))"
    ]
@@ -128,6 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save query and its most relevant documents\n",
     "with open(\"../ir_techniques/exact_search/index.pkl\", \"wb\") as f:\n",
     "    pickle.dump(predictions, f)"
    ]
@@ -147,6 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load OpenAI's API key\n",
     "load_dotenv()\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")"
    ]
@@ -158,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load document embeddings from file\n",
+    "# Load document' ADA embeddings\n",
     "with open(\"../embeddings/text-embedding-ada-002-v2/documents.pkl\", \"rb\") as f:\n",
     "    documents_ada = pickle.load(f)"
    ]
@@ -170,6 +176,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a list of tuple of the form: (document, embedding)\n",
+    "# This is the format accepted by vector stores defined in langchain\n",
     "data = []\n",
     "for i, doc in documents_ada.items():\n",
     "    data.append((i, doc[\"embedding\"]))"
@@ -180,7 +188,7 @@
    "id": "0dab071f-611c-464f-8c77-e17003a04c4a",
    "metadata": {},
    "source": [
-    "#### Annoy"
+    "#### ANNOY"
    ]
   },
   {
@@ -201,6 +209,7 @@
    "source": [
     "%time\n",
     "\n",
+    "# Build ANNOY vector store\n",
     "annoy_vs = Annoy.from_embeddings(\n",
     "    text_embeddings=data, \n",
     "    embedding=OpenAIEmbeddings(), \n",
@@ -214,6 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save ANNOY vector store\n",
     "annoy_vs.save_local(\"../ir_techniques/annoy/\")"
    ]
   },
@@ -243,6 +253,7 @@
    "source": [
     "%time\n",
     "\n",
+    "# Build FAISS vector store\n",
     "faiss_vs = FAISS.from_embeddings(\n",
     "    text_embeddings=data, \n",
     "    embedding=OpenAIEmbeddings(),\n",
@@ -256,6 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save FAISS vector store\n",
     "faiss_vs.save_local(\"../ir_techniques/faiss/\")"
    ]
   }
