--- a/src/cisi/notebooks/llm_w_rag_exact_search.ipynb
+++ b/src/cisi/notebooks/llm_w_rag_exact_search.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load query and most relevant documents\n",
+    "# Load query and its most relevant documents\n",
     "with open(\"../ir_techniques/exact_search/index.pkl\", \"rb\") as f:\n",
     "    predictions = pickle.load(f)"
    ]
