--- a/src/cisi/notebooks/llm_wo_rag.ipynb
+++ b/src/cisi/notebooks/llm_wo_rag.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports\n",
     "from dotenv import load_dotenv\n",
     "from langchain.embeddings import LlamaCppEmbeddings\n",
     "from langchain.llms import LlamaCpp, OpenAI\n",
@@ -23,6 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load OpenAI's API key\n",
     "load_dotenv()\n",
     "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")"
    ]
@@ -34,6 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load queries' text\n",
     "with open(\"../dataset/queries.pkl\", \"rb\") as f:\n",
     "    queries = pickle.load(f)"
    ]
@@ -53,6 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the LLM (default is da-vinci-0.0.3)\n",
     "da_vinci_llm = OpenAI(openai_api_key=OPENAI_API_KEY)"
    ]
   },
@@ -73,6 +77,7 @@
    "source": [
     "#### API CALL WARNING ####\n",
     "\n",
+    "# Get LLM's response for each query\n",
     "answers_da_vinci = {}\n",
     "for i, query in tqdm(queries.items(), desc=\"Collecting ChatGPT Responses\"):\n",
     "    answers_da_vinci[i] = {\"response\": da_vinci_llm.invoke(query[\"text\"])}"
@@ -97,6 +102,7 @@
     }
    ],
    "source": [
+    "# Sanity check\n",
     "queries[1][\"text\"], answers_da_vinci[1][\"response\"]"
    ]
   },
@@ -107,6 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save all responses\n",
     "with open(\"../responses/da-vinci-0.0.3/llm_wo_rag.pkl\", \"wb\") as f:\n",
     "    pickle.dump(answers_da_vinci, f)"
    ]
@@ -126,6 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define the LLM \n",
     "gpt_llm = OpenAI(openai_api_key=OPENAI_API_KEY, model=\"gpt-3.5-turbo-instruct\")"
    ]
   },
@@ -146,6 +154,7 @@
    "source": [
     "#### API CALL WARNING ####\n",
     "\n",
+    "# Get LLM's response for each query\n",
     "answers_gpt = {}\n",
     "for i, query in tqdm(queries.items(), desc=\"Collecting ChatGPT Responses\"):\n",
     "    answers_gpt[i] = {\"response\": gpt_llm.invoke(query[\"text\"])}"
@@ -170,6 +179,7 @@
     }
    ],
    "source": [
+    "# Sanity check\n",
     "queries[1][\"text\"], answers_gpt[1][\"response\"]"
    ]
   },
@@ -180,6 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save all responses\n",
     "with open(\"../responses/gpt-3.5-turbo-instruct/llm_wo_rag.pkl\", \"wb\") as f:\n",
     "    pickle.dump(answers_gpt, f)"
    ]
@@ -556,9 +567,10 @@
     }
    ],
    "source": [
+    "# Define the LLM \n",
     "llama_llm = LlamaCpp(\n",
     "    model_path=\"../../experiments/backups/llama.cpp/models/llama-2-7b-chat.ggmlv3.q4_K_S.gguf.bin\", \n",
-    "    n_ctx=2048, \n",
+    "    n_ctx=4096, \n",
     "    verbose=False)\n",
     "llama_llm.client.verbose = False"
    ]
@@ -578,6 +590,7 @@
     }
    ],
    "source": [
+    "# Get LLM's response for each query\n",
     "answers_llama = {}\n",
     "for i, query in tqdm(queries.items(), desc=\"Collecting LLaMa Responses\"):\n",
     "    answers_llama[i] = {\"response\": llama_llm.invoke(query[\"text\"])}"
@@ -602,6 +615,7 @@
     }
    ],
    "source": [
+    "# Sanity check\n",
     "queries[1][\"text\"], answers_llama[1][\"response\"]"
    ]
   },
@@ -612,6 +626,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save all responses\n",
     "with open(\"../responses/llama-7b/llm_wo_rag.pkl\", \"wb\") as f:\n",
     "    pickle.dump(answers_llama, f)"
    ]
