--- a/src/cisi/notebooks/preprocess_data.ipynb
+++ b/src/cisi/notebooks/preprocess_data.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports\n",
     "from nltk.corpus import stopwords \n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.tokenize import word_tokenize\n",
@@ -22,6 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Common setup for data pre-processing\n",
     "lemmatizer = WordNetLemmatizer()\n",
     "stop_words = set(stopwords.words(\"english\"))"
    ]
@@ -41,6 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load original documents\n",
     "with open(\"../dataset/original/CISI.ALL\") as f:\n",
     "    articles = f.readlines()"
    ]
@@ -119,6 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract id, title, and body for each document\n",
     "d, _ = extract_docs(articles)\n",
     "docs = {x[\"id\"]: {\"text\": x[\"title\"] + \"\\n\" + x[\"body\"]} for x in d}"
    ]
@@ -141,28 +145,8 @@
     }
    ],
    "source": [
-    "docs[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "3a1e4411-e9f5-4086-b1b5-b14f9ccc44ba",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1460"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(docs)"
+    "# Sanity check\n",
+    "docs[1], len(docs)"
    ]
   },
   {
@@ -172,13 +156,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_text(sentence):  # Used only for LSI\n",
+    "# Data pre-processing (Used only for LSI)\n",
+    "def clean_text(sentence):\n",
+    "    # Remove punctuations\n",
     "    lookup_table = sentence.maketrans(\"\", \"\", string.punctuation)\n",
     "    clean_text = sentence.translate(lookup_table)\n",
+    "\n",
+    "    # Convert to lowercase and tokenize into words\n",
     "    word_list = word_tokenize(clean_text.lower())\n",
+    "\n",
+    "    # Remove stop-words and words with length less than or equal to 2\n",
     "    word_list = [w for w in word_list if not w in stop_words and len(w) > 2]\n",
+    "\n",
+    "    # Reduce each word to its lemma\n",
     "    word_list = [lemmatizer.lemmatize(word) for word in word_list]\n",
+    "\n",
+    "    # Convert back to sentence\n",
     "    clean_sentence = \" \".join(word_list)\n",
+    "    \n",
     "    return clean_sentence"
    ]
   },
@@ -189,6 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Pre-process documents\n",
     "for i, doc in docs.items():\n",
     "    docs[i][\"clean_text\"] = clean_text(doc[\"text\"])"
    ]
@@ -212,6 +208,7 @@
     }
    ],
    "source": [
+    "# Sanity check\n",
     "docs[1]"
    ]
   },
@@ -222,6 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save documents to file\n",
     "with open(\"../dataset/documents.pkl\", \"wb\") as f:\n",
     "    pickle.dump(docs, f)"
    ]
@@ -251,6 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load original queries\n",
     "idx = None\n",
     "with open(\"../dataset/original/CISI.QRY\") as f:\n",
     "    for query in f.read().split(\".I\"):\n",
@@ -282,28 +281,8 @@
     }
    ],
    "source": [
-    "queries[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "ea1affac-0b5b-4d22-b5c4-45321d9dc7e2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "112"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(queries)"
+    "# Sanity check\n",
+    "queries[1], len(queries)"
    ]
   },
   {
@@ -313,6 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Pre-process queries\n",
     "for i, query in queries.items():\n",
     "    queries[i][\"clean_text\"] = clean_text(query[\"text\"])"
    ]
@@ -336,6 +316,7 @@
     }
    ],
    "source": [
+    "# Sanity check\n",
     "queries[1]"
    ]
   },
@@ -346,6 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save queries to file\n",
     "with open(\"../dataset/queries.pkl\", \"wb\") as f:\n",
     "    pickle.dump(queries, f)"
    ]
@@ -365,6 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load original relevance set\n",
     "with open(\"../dataset/original/CISI.REL\") as f:\n",
     "    lines = f.read().split(\"\\n\")[:-1]"
    ]
@@ -376,6 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Extract the ground truth documents for each query\n",
     "ground_truth = {}\n",
     "for line in lines:\n",
     "    clean_line = line.strip().replace(\"\\t\",\" \").split()\n",
@@ -401,28 +385,8 @@
     }
    ],
    "source": [
-    "print(ground_truth[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "49f043e6-af40-4965-8d42-2c228624e3c2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "76"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(ground_truth)"
+    "# Sanity check\n",
+    "print(ground_truth[1]), len(ground_truth)"
    ]
   },
   {
@@ -432,6 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save relevance set to file\n",
     "with open(\"../dataset/rel_set.pkl\", \"wb\") as f:\n",
     "    pickle.dump(ground_truth, f)"
    ]
