--- a/src/arguana/notebooks/generate_embeddings.ipynb
+++ b/src/arguana/notebooks/generate_embeddings.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "be2ffcb3-e427-402c-abe7-50f500618c96",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
        "TfidfVectorizer()"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "44825793-1357-4dca-8af4-4ef1839b4cba",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d6eb88b2-4b38-47b8-87b2-4f46be9c31a2",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "46a0986e-a0c4-4015-a133-56cd6174781c",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "40232886-1d61-4941-bd38-c0fcee81ed0d",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "3897c862-a3d1-46f2-b87d-aa04d68c9913",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "e4321fc4-814d-4253-88b0-bcf2c4ce30fc",
    "metadata": {},
    "outputs": [],
@@ -203,12 +203,12 @@
    "id": "3d2f39c4-7dff-4d08-aa48-8dfcc9d5614d",
    "metadata": {},
    "source": [
-    "### ADA (text-embedding-ada-002-v2)"
+    "### OpenAI ADA (text-embedding-ada-002-v2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "44d242d9-ff0f-4b1d-8e02-2bbb831cdf5f",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "d4efb486-d654-4700-b06e-c49af7fad807",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "15524b46-3b2c-4192-be56-845b30467fdd",
    "metadata": {},
    "outputs": [],
@@ -251,10 +251,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "fb15575f-955c-4b25-a275-fc6f67fc3d4f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Generating Document Embeddings: 100%|███████| 2000/2000 [07:02<00:00,  4.73it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "#### API CALL WARNING ####\n",
     "\n",
@@ -266,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "fe8600c1-7c2c-4484-b00a-b8cf3346b2ef",
    "metadata": {},
    "outputs": [],
@@ -278,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "4f1b04bf-3421-4ec5-931e-5278738f57a4",
    "metadata": {},
    "outputs": [
@@ -286,7 +294,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating Query Embeddings: 100%|█████████████████████████| 112/112 [00:23<00:00,  4.85it/s]\n"
+      "Generating Query Embeddings: 100%|██████████| 1406/1406 [04:49<00:00,  4.86it/s]\n"
      ]
     }
    ],
@@ -301,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "04815f25-29b0-4f7b-b056-e8f54ae3a926",
    "metadata": {},
    "outputs": [],
@@ -310,6 +318,14 @@
     "with open(\"../embeddings/text-embedding-ada-002-v2/queries.pkl\", \"wb\") as f:\n",
     "    pickle.dump(queries_ada, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a143754c-b993-4031-aac9-00435a82e8a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
