--- a/src/arguana/notebooks/ir_techniques.ipynb
+++ b/src/arguana/notebooks/ir_techniques.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "10c993e3-6c24-4573-ba55-09aafdde230b",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "21ac9292-6b69-459a-bec8-8b0f18a3e1c7",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d4ff43b6-268c-44bc-b0ff-f1d0074dbe69",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Computing similarity scores: 100%|████████████████████████| 112/112 [00:00<00:00, 198.37it/s]\n"
+      "Computing similarity scores: 100%|█████████| 1406/1406 [00:07<00:00, 176.83it/s]\n"
      ]
     }
    ],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "66c8d575-0ec9-4f4c-b449-917e30f83abc",
    "metadata": {},
    "outputs": [
@@ -201,8 +201,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1 µs, sys: 1e+03 ns, total: 2 µs\n",
-      "Wall time: 1.91 µs\n"
+      "CPU times: user 2 µs, sys: 1e+03 ns, total: 3 µs\n",
+      "Wall time: 8.82 µs\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "6158b6d0-aa91-4919-94ad-2c4042446b58",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "a83a0b31-b187-47eb-827f-c94eb56a1c86",
    "metadata": {},
    "outputs": [
@@ -245,8 +245,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
-      "Wall time: 2.15 µs\n"
+      "CPU times: user 3 µs, sys: 6 µs, total: 9 µs\n",
+      "Wall time: 11.2 µs\n"
      ]
     }
    ],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "91481ff5-23e0-484f-9be5-ff1fe82ef766",
    "metadata": {},
    "outputs": [],
@@ -270,6 +270,14 @@
     "# Save FAISS vector store\n",
     "faiss_vs.save_local(\"../ir_techniques/faiss/\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c22b62bb-3c44-4a26-8d0b-76f7b38a11d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -288,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
