--- a/src/cisi/notebooks/llm_wo_rag.ipynb
+++ b/src/cisi/notebooks/llm_wo_rag.ipynb
@@ -569,7 +569,7 @@
    "source": [
     "# Define the LLM \n",
     "llama_llm = LlamaCpp(\n",
-    "    model_path=\"../../experiments/backups/llama.cpp/models/llama-2-7b-chat.ggmlv3.q4_K_S.gguf.bin\", \n",
+    "    model_path=\"../../llama.cpp/models/llama-2-7b-chat.ggmlv3.q4_K_S.gguf.bin\", \n",
     "    n_ctx=4096, \n",
     "    verbose=False)\n",
     "llama_llm.client.verbose = False"
