--- a/src/cisi/notebooks/preprocess_data.ipynb
+++ b/src/cisi/notebooks/preprocess_data.ipynb
@@ -13,7 +13,8 @@
     "from nltk.tokenize import word_tokenize\n",
     "\n",
     "import pickle\n",
-    "import string"
+    "import string\n",
+    "from collections import defaultdict"
    ]
   },
   {
@@ -342,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "f892c31b-1173-45ce-98f6-dbe4eda859cd",
    "metadata": {},
    "outputs": [],
@@ -354,52 +355,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
+   "id": "7d46296a-d449-437f-8c38-0b5c749248a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../dataset/original/CISI.REL\") as f:\n",
+    "    lines = f.read().split('\\n')[:-1]\n",
+    "    ground_truth = [[]]*len(lines)\n",
+    "    for line in lines:\n",
+    "        clean_line = line.strip().replace('\\t',' ').split()\n",
+    "        query, doc = [int(num.replace(' ','')) for num in clean_line[:2]]\n",
+    "        ground_truth[query].append(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "0884c850-43b5-44a4-bdd9-578b57fd9770",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Extract the ground truth documents for each query\n",
-    "ground_truth = {}\n",
+    "ground_truth = defaultdict(list)\n",
     "for line in lines:\n",
-    "    clean_line = line.strip().replace(\"\\t\",\" \").split()\n",
-    "    query, doc = [int(num.replace(\" \",\"\")) for num in clean_line[:2]]\n",
-    "    if query in ground_truth:\n",
-    "        ground_truth[query].append(doc)\n",
-    "    else:\n",
-    "        ground_truth[query] = []"
+    "    clean_line = line.strip().replace('\\t',' ').split()\n",
+    "    query, doc = [int(num.replace(' ','')) for num in clean_line[:2]]\n",
+    "    ground_truth[query].append(doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "38294276-0d59-4522-961d-0af83922dd0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sanity check\n",
+    "final_dict = dict(enumerate(ground_truth))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "67299b86-6056-4f36-9ee8-cc0ca87b5749",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[35, 38, 42, 43, 52, 65, 76, 86, 150, 189, 192, 193, 195, 215, 269, 291, 320, 429, 465, 466, 482, 483, 510, 524, 541, 576, 582, 589, 603, 650, 680, 711, 722, 726, 783, 813, 820, 868, 869, 894, 1162, 1164, 1195, 1196, 1281]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3114"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Sanity check\n",
-    "print(ground_truth[1]), len(ground_truth)"
+    "len(final_dict[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "156c964b-32bf-4f11-b70f-a34d78be07fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save relevance set to file\n",
     "with open(\"../dataset/rel_set.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(ground_truth, f)"
+    "    pickle.dump(final_dict, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "622c49a7-05c5-4569-8405-93220f05b9da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -418,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
