--- a/src/get_results.ipynb
+++ b/src/get_results.ipynb
@@ -48,7 +48,7 @@
    "id": "7d8226b4-d078-41e0-8381-7c976f160a9e",
    "metadata": {},
    "source": [
-    "## Information Retrieval - Experimental Results"
+    "## Information Retrieval - Metric Calculation"
    ]
   },
   {
@@ -531,27 +531,6 @@
     "    [recall_at_k(preds, label) for preds, label in zip(annoy_predictions[1:], ground_truth)])\n",
     "annoy_mean_sps = np.mean(\n",
     "    [precision_at_k(preds, label, 1) for preds, label in zip(annoy_predictions[1:], ground_truth)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "1fa4ed20-7712-4456-994c-ec78d870c3d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.9678571428571429, 0.0031080833103954487, 0.9732142857142857)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "annoy_mean_precision_at_k, annoy_mean_recall_at_k, annoy_mean_sps"
    ]
   },
   {
