--- a/src/get_results.ipynb
+++ b/src/get_results.ipynb
@@ -8,11 +8,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "# import openai\n",
     "import time\n",
     "import pickle\n",
     "from tqdm import tqdm\n",
-    "# from langchain.llms import OpenAI\n",
     "from dotenv import load_dotenv\n",
     "from nltk.translate.bleu_score import sentence_bleu, SmoothingFunction\n",
     "from rouge_score import rouge_scorer\n",
@@ -48,7 +46,7 @@
    "id": "7d8226b4-d078-41e0-8381-7c976f160a9e",
    "metadata": {},
    "source": [
-    "## Information Retrieval - Metric Calculation"
+    "## Information Retrieval - Metrics Calculation"
    ]
   },
   {
@@ -546,7 +544,7 @@
    "id": "3516ac6a-c46f-4073-b3cb-e92b3b1decbb",
    "metadata": {},
    "source": [
-    "## RAG Evaluation - Experimental Results"
+    "## RAG Evaluation - Metrics Calculation"
    ]
   },
   {
@@ -1102,7 +1100,7 @@
    "id": "b42164a7-aa5e-4696-b57a-279a0a8a18ee",
    "metadata": {},
    "source": [
-    "# Outputs"
+    "# Experimental Results"
    ]
   },
   {
