--- a/src/get_results.ipynb
+++ b/src/get_results.ipynb
@@ -7,16 +7,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import time\n",
-    "import pickle\n",
-    "from tqdm import tqdm\n",
     "from dotenv import load_dotenv\n",
-    "from nltk.translate.bleu_score import sentence_bleu, SmoothingFunction\n",
-    "from rouge_score import rouge_scorer\n",
     "from langchain.embeddings import OpenAIEmbeddings\n",
     "from langchain.vectorstores import Annoy, FAISS\n",
-    "import numpy as np"
+    "from nltk.translate.bleu_score import sentence_bleu, SmoothingFunction\n",
+    "from rouge_score import rouge_scorer\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import pickle\n",
+    "import time"
    ]
   },
   {
@@ -510,14 +511,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cbd87644-0a31-423b-bb27-ccfcdfc87db4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 35,
    "id": "355ef12c-dfbf-40be-9fa4-008586a44b81",
    "metadata": {},
@@ -530,14 +523,6 @@
     "annoy_mean_sps = np.mean(\n",
     "    [precision_at_k(preds, label, 1) for preds, label in zip(annoy_predictions[1:], ground_truth)])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f25e7d73-2a86-4c2d-854d-d49fe5c57bef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1359,14 +1344,6 @@
     "# Print table\n",
     "print(table)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0dc2872c-e297-40fa-ba7d-650f3961cac9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1385,7 +1362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
